--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <title>BTA Kochen | Startseite</title>
       <meta name="description" content="Die Kochseite für Webworker. Tolle Rezepte, einach zu kochen, alles super lecker.">
       <meta name="viewport" content="width=device-width, initial-sacle=1, user-scalable=yes">
+      <link rel="stylesheet" href="fonts/icons.css">
       <link rel="stylesheet" href="style.css">
   </head>
   <body>
@@ -15,7 +16,9 @@
           <img id="logo" src="img/logo.svg" alt="Logo Kochen 2.0" height="40">
           </a>
 
-          <button id="burger" type="button" name="button">Burger</button>
+          <button id="burger" type="button" name="button">
+            <span class="icon-menu"></span>
+          </button>
           <!--NAV IST DAS ELEMENT FÜR NAVIGATION-->
 
 
@@ -37,8 +40,22 @@
           </nav>
       </div>
     </header>
+    <main id="hauptteil"
+      ><div class="hero">
+        <div class="hero-text">
+          <h1>Die besten Rezepte für Webworker</h1>
+          <h2>Es gibt mehr als Pizza & Ravioli</h2>
+          <a href="#">Entdecke die Leckereien</a>
+        </div>
+      </div>
 
+    </main>
     <!--hier kommt das Java Script für das menu-->
     <script type="text/javascript" src="menu.js"></script>
+
+
+
+
   </body>
+
 </html>
