--- a/index.html
+++ b/index.html
@@ -45,9 +45,105 @@
         <div class="hero-text">
           <h1>Die besten Rezepte für Webworker</h1>
           <h2>Es gibt mehr als Pizza & Ravioli</h2>
-          <a href="#">Entdecke die Leckereien</a>
+          <a href="#rezepte">Entdecke die Leckereien</a>
         </div>
       </div>
+
+      <div class="wrapper flexbox">
+        <section id="rezepte">
+          <h2>Die neuesten Rezepte</h2>
+            <div class="row flexbox">
+              <article class="card">
+                <img src="img/farfalle.jpg" alt="Farfalle mit Pesto">
+                <div class="border">
+                  <h3>Farfalle mit Pesto</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <a href="#">zum Rezept</a>
+                </div>
+              </article>
+
+              <article class="card">
+                <img src="img/reispfanne-lissabon.jpg" alt="Reispfanne Lissabon">
+                <div class="border">
+                  <h3>Farfalle mit Pesto</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <a href="#">zum Rezept</a>
+                </div>
+
+              </article>
+
+
+            </div>
+
+            <div class="row flexbox">
+              <article class="card">
+                <img src="img/farfalle.jpg" alt="Farfalle mit Pesto">
+                <div class="border">
+                  <h3>Farfalle mit Pesto</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <a href="#">zum Rezept</a>
+                </div>
+              </article>
+
+              <article class="card">
+                <img src="img/reispfanne-lissabon.jpg" alt="Reispfanne Lissabon">
+                <div class="border">
+                  <h3>Farfalle mit Pesto</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <a href="#">zum Rezept</a>
+                </div>
+
+              </article>
+
+
+            </div>
+
+            <div class="row flexbox">
+              <article class="card">
+                <img src="img/farfalle.jpg" alt="Farfalle mit Pesto">
+                <div class="border">
+                  <h3>Farfalle mit Pesto</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <a href="#">zum Rezept</a>
+                </div>
+              </article>
+
+              <article class="card">
+                <img src="img/reispfanne-lissabon.jpg" alt="Reispfanne Lissabon">
+                <div class="border">
+                  <h3>Farfalle mit Pesto</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                  <a href="#">zum Rezept</a>
+                </div>
+
+              </article>
+
+
+            </div>
+        </section>
+        <aside id="sidebar">
+          <section id="suche">
+            <h2>Finde dein Rezept</h2>
+            <form class="" action="https://www.google.de/search"
+             method="get">
+              <input type="search" name="q" value="" placeholder="mmmmmh">
+              <button type="submit" name="button">
+                <spanc class="icon-search"></span>
+
+              </button>
+
+            </form>
+
+          </section>
+          <section id="about">
+
+          </section>
+          <section id="affiliate">
+
+          </section>
+        </aside>
+      </div>
+
 
     </main>
     <!--hier kommt das Java Script für das menu-->
